metadata-classic/objects/CategorizationDefinition__c.object
<CustomObject>
    <description>Metadata object - the records from this object define what Categorization options are available for a given record.</description>
    <fields>
        <fullName>ActiveDate__c</fullName>
        <description>The date this Definition is available from</description>
        <inlineHelpText>The datee this Definition is available from</inlineHelpText>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this Categorization Definition is currently available for use.</description>
        <inlineHelpText>Whether or not this Categorization Definition is currently available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The public-facing name for this Categorization Definition. To be used where categorization options are available to Pros/Customers - e.g. Suggestion box, forms, etc.</description>
        <inlineHelpText>The public-facing name for this Categorization Definition. To be used where categorization options are available to Pros/Customers - e.g. Suggestion box, forms, etc.</inlineHelpText>
        <label>Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableOnAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available On Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableOnCase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this definition is available on the Case object.</description>
        <inlineHelpText>If true, this definition is available on the Case object.</inlineHelpText>
        <label>Available On Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableOnEnrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this definition is available on the Enrollment Object.</description>
        <inlineHelpText>If checked, this definition is available on the Enrollment Object.</inlineHelpText>
        <label>Available On Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvailableinHelpCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this category becomes available in the Help Center in the suggestion box.</description>
        <inlineHelpText>If checked, this category becomes available in the Help Center in the suggestion box.</inlineHelpText>
        <label>Available in Help Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSATEligible__c</fullName>
        <description>The CSAT eligibility of this Definition</description>
        <inlineHelpText>The CSAT eligibility of this Definition</inlineHelpText>
        <label>CSAT Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                    <default>true</default>
                    <label>Eligible</label>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Always Eligible</fullName>
                    <isActive>false</isActive>
                    <label>Always Eligible</label>
                </value>
                <value>
                    <fullName>Always Ineligible</fullName>
                    <isActive>false</isActive>
                    <label>Always Ineligible</label>
                </value>
                <value>
                    <fullName>Ineligible if Primary</fullName>
                    <isActive>false</isActive>
                    <label>Ineligible if Primary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CategoryType__c</fullName>
        <description>Category or Subcategory?</description>
        <inlineHelpText>Category or Subcategory?</inlineHelpText>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Subcategory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UI organization bucket - is this category available for Customers?</description>
        <label>Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExperienceType__c</fullName>
        <description>If this Category should only be available for interactions with users in a specific product experience, then this should be overridden. Otherwise, the default Standard experience type is used.</description>
        <inlineHelpText>If this Category should only be available for interactions with users in a specific product experience, then this should be overridden. Otherwise, the default Standard experience type is used.</inlineHelpText>
        <label>Experience Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Instant Match</fullName>
                </value>
                <value>
                    <fullName>Experiment</fullName>
                </value>
                <value>
                    <fullName>MTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UI organization bucket - is this a functional category?</description>
        <label>Functional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <description>The agent-facing help text for this category.</description>
        <inlineHelpText>The agent-facing help text for this category.</inlineHelpText>
        <label>Help Text</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>The code for the icon to be displayed next to this category/subcategory/product update, if applicable.</description>
        <inlineHelpText>The code for the icon to be displayed next to this category/subcategory/product update, if applicable.</inlineHelpText>
        <label>Icon</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <description>The date/time this Definition is available until.</description>
        <inlineHelpText>The date/time this Definition is available until.</inlineHelpText>
        <label>Inactive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>The unique key of this Categorization Definition</description>
        <displayFormat>{YYYY}{MM}-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>The unique key of this Categorization Definition.</inlineHelpText>
        <label>Key</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KnowledgeText__c</fullName>
        <label>Knowledge Text</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Category for use with Subcategories.</description>
        <inlineHelpText>The parent Category for use with Subcategories.</inlineHelpText>
        <label>Parent Category</label>
        <referenceTo>CategorizationDefinition__c</referenceTo>
        <relationshipLabel>Subcategories</relationshipLabel>
        <relationshipName>Subcategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <description>The text placeholder to display on the input field, if any.</description>
        <inlineHelpText>The text placeholder to display on the input field, if any.</inlineHelpText>
        <label>Placeholder</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreventRecordCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this subcategory will not create a Categorization__c record when &apos;submit&apos; is set.</description>
        <inlineHelpText>If checked, this subcategory will not create a Categorization__c record when &apos;submit&apos; is set.</inlineHelpText>
        <label>Prevent Record Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>UI organization bucket - is this category available for Pros?</description>
        <label>Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SentimentScale__c</fullName>
        <description>The availability of sentiment to be captured.
If zero, sentiment is not available.
If 2, sentiment is to be captured on a two-point scale (positive or negative)
If 3, sentiment is to be captured on a three-point scale (positive, negative, neutral)</description>
        <inlineHelpText>The availability of sentiment to be captured.
If zero, sentiment is not available.
If 2, sentiment is to be captured on a two-point scale (positive or negative).
If 3, sentiment is to be captured on a three-point scale (positive, negative, neutral).</inlineHelpText>
        <label>Sentiment Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>The sort order of a Product Update record.</description>
        <inlineHelpText>The sort order of a Product Update record.</inlineHelpText>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The overall type / Level zero categorization type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Categorization Definition</label>
    <listViews>
        <fullName>AllActiveproductUpdates</fullName>
        <columns>NAME</columns>
        <columns>SortOrder__c</columns>
        <columns>ActiveDate__c</columns>
        <columns>ExperienceType__c</columns>
        <columns>SentimentScale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CategorizationDefinition__c.ProductUpdate</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Product Updates</label>
        <sharedTo>
            <roleAndSubordinates>SharedServicesUserTPH</roleAndSubordinates>
            <roleAndSubordinates>SharedServicesUserTSL</roleAndSubordinates>
            <roleAndSubordinates>SpecialProjectsTSL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCategories</fullName>
        <columns>NAME</columns>
        <columns>AvailableOnCase__c</columns>
        <columns>AvailableOnEnrollment__c</columns>
        <columns>AvailableOnAccount__c</columns>
        <columns>CategoryType__c</columns>
        <columns>CSATEligible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CategoryType__c</field>
            <operation>equals</operation>
            <value>Category</value>
        </filters>
        <label>All Categories</label>
        <sharedTo>
            <roleAndSubordinates>SharedServicesUserTSL</roleAndSubordinates>
            <roleAndSubordinates>SpecialProjectsTSL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllInactiveproductUpdates</fullName>
        <columns>NAME</columns>
        <columns>SortOrder__c</columns>
        <columns>ActiveDate__c</columns>
        <columns>ExperienceType__c</columns>
        <columns>SentimentScale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CategorizationDefinition__c.ProductUpdate</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Inactive Product Updates</label>
        <sharedTo>
            <roleAndSubordinates>SharedServicesUserTPH</roleAndSubordinates>
            <roleAndSubordinates>SharedServicesUserTSL</roleAndSubordinates>
            <roleAndSubordinates>SpecialProjectsTSL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Subcategories</fullName>
        <columns>NAME</columns>
        <columns>AvailableOnCase__c</columns>
        <columns>AvailableOnEnrollment__c</columns>
        <columns>CategoryType__c</columns>
        <columns>ParentCategory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CategoryType__c</field>
            <operation>equals</operation>
            <value>Subcategory</value>
        </filters>
        <label>All Subcategories</label>
    </listViews>
    <listViews>
        <fullName>AllproductUpdates</fullName>
        <columns>NAME</columns>
        <columns>SortOrder__c</columns>
        <columns>ParentCategory__c</columns>
        <columns>ActiveDate__c</columns>
        <columns>ExperienceType__c</columns>
        <columns>SentimentScale__c</columns>
        <columns>AvailableOnAccount__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CategorizationDefinition__c.ProductUpdate</value>
        </filters>
        <label>All Product Updates</label>
    </listViews>
    <listViews>
        <fullName>MTSCategories</fullName>
        <columns>NAME</columns>
        <columns>AvailableOnCase__c</columns>
        <columns>AvailableOnEnrollment__c</columns>
        <columns>CategoryType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ExperienceType__c</field>
            <operation>equals</operation>
            <value>MTS</value>
        </filters>
        <label>MTS Categories</label>
        <sharedTo>
            <roleAndSubordinates>CustomerSuccessOrganization</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Categorization Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorization Definitions</pluralLabel>
    <recordTypes>
        <fullName>Category</fullName>
        <active>true</active>
        <description>Category/Subcategory</description>
        <label>Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProductUpdate</fullName>
        <active>true</active>
        <label>Product Update</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PreventCSATEligibility</fullName>
        <active>true</active>
        <description>Prevents setting CSAT Eligibility for L1 Categories.</description>
        <errorConditionFormula>RecordType.Name = &quot;Category&quot; &amp;&amp;
ISPICKVAL(CategoryType__c, &quot;Category&quot;) &amp;&amp;
NOT(ISPICKVAL(CSATEligible__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>CSATEligible__c</errorDisplayField>
        <errorMessage>Primary Categories do not require CSAT Eligibility.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PreventParentCategory</fullName>
        <active>true</active>
        <description>Prevents setting a Parent Category if CategoryType__c = Category</description>
        <errorConditionFormula>RecordType.Name = &quot;Category&quot; &amp;&amp;
ISPICKVAL(CategoryType__c, &quot;Category&quot;) &amp;&amp;
NOT(ISBLANK(ParentCategory__c))</errorConditionFormula>
        <errorDisplayField>ParentCategory__c</errorDisplayField>
        <errorMessage>Primary Categories should not have a Parent Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireAlias</fullName>
        <active>true</active>
        <description>Requires Alias if category is available in Help Center.</description>
        <errorConditionFormula>RecordType.Name = &quot;Category&quot; &amp;&amp;
AvailableinHelpCenter__c &amp;&amp;
ISBLANK(Alias__c)</errorConditionFormula>
        <errorDisplayField>Alias__c</errorDisplayField>
        <errorMessage>Please provide an alias for use in the Help Center.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireCSATeligibility</fullName>
        <active>true</active>
        <description>Requires CSAT Eligibility value if CategoryType__c = Subcategory</description>
        <errorConditionFormula>RecordType.Name = &quot;Category&quot; &amp;&amp;
ISPICKVAL(CategoryType__c, &quot;Subcategory&quot;) &amp;&amp; ISPICKVAL(CSATEligible__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>CSATEligible__c</errorDisplayField>
        <errorMessage>Please select the level of CSAT Eligibility for this Subcategory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireCategoryType</fullName>
        <active>true</active>
        <description>Require Category Type when RecordtType.Name = &quot;Category&quot;</description>
        <errorConditionFormula>RecordType.Name = &quot;Category&quot; &amp;&amp;
ISPICKVAL(CategoryType__c,&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>CategoryType__c</errorDisplayField>
        <errorMessage>Please indicate whether this is a Category or Subcategory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireParentCategory</fullName>
        <active>true</active>
        <description>Parent Category required if CategoryType__c = Subcategory</description>
        <errorConditionFormula>RecordType.Name = &quot;Category&quot; &amp;&amp;
ISPICKVAL(CategoryType__c, &quot;Subcategory&quot;) &amp;&amp;
ISNULL(ParentCategory__c)</errorConditionFormula>
        <errorDisplayField>ParentCategory__c</errorDisplayField>
        <errorMessage>Please select the parent Category for this Subcategory.</errorMessage>
    </validationRules>
</CustomObject>